--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.19.6
   flutter_bloc: ^8.1.5
   get_it: ^7.7.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
